--- a/style-lessison5.css
+++ b/style-lessison5.css
@@ -1,10 +1,35 @@
-.img{
-    background-color: white;
-    height: 100%;
-    width: 100%;
-
+*{
+    box-sizing: border-box;
+    padding:0;
+    margin: 0;
 }
-.img1{
-    width: 175px;
-    height: 175px;
+
+.post-container {
+    width: 1100px;
+}
+.post-container img{
+    width: 400px;
+}
+.post-container a {
+    font-size: 35px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+.post-container .title {
+    margin-bottom: 20px;
+}
+.post-container .category{
+    color: #a1a1a1;
+    margin-bottom: 15px;
+}
+.post-container .category b{
+    color: #41455e;
+}
+.post-container .col-02{
+    padding: 0px 20px;
+    vertical-align: top;
+}
+p{
+    color: #636363;
 }
