--- a/style_sission4.css
+++ b/style_sission4.css
@@ -1,33 +1,59 @@
-.table{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     text-align: center;
     background-color: #f4f4f4;
-    color:#2c3f50 ;
+    color: #2c3f50;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px 10px ;
 }
-.table1{
-    background-color:#027bff;
-    color: white;
+
+h1 {
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
-.table2{
-    background-color:white ;
-    color:black ;
-}
-th,
-td{
+
+table {
+    text-align: center;
+    width: 100%;
+    background-color: #f4f4f4;
+    color: #2c3f50;
     padding: 5px;
+
 }
-.View{
+th,td{
+    padding: 10px;
+}
+
+.content1 {
+    background-color: #027bff;
+    color: white;
+    
+}
+
+.content2 {
+    background-color: white;
+    color: #2c3f50;
+}
+
+.View {
     background-color: green;
-    color: white; 
-    border:none 
+    color: white;
+    border: none
 }
-.Updete{
+
+.Updete {
     background-color: yellow;
     color: black;
     border: none;
 }
-.Delete{
+
+.Delete {
     background-color: red;
     color: white;
-     border:none
+    border: none
 }
- 
